<resources>
    <string name="app_name">Am I Rich?</string>
    <string name="bitcoin_default_text">\?\?\?\?</string>
    <string name="bitcoin_error_text">Error</string>
    <string name="bitcoin_label">Bitcoin</string>
    <string name="ethereum_default_text">\?\?\?\?</string>
    <string name="ethereum_error_text">Error</string>
    <string name="ethereum_label">Ethereum</string>
    <string name="base">Base Currency</string>
    <string name="imageview_desc">Bitcoin Logo</string>
    <string name="imageview_desc2">Ethereum Logo</string>

    <string-array name="currency_array">
        <item>USD</item>
        <item>AUD</item>
        <item>BRL</item>
        <item>CAD</item>
        <item>CNY</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>HKD</item>
        <item>JPY</item>
        <item>PLN</item>
        <item>RUB</item>
        <item>SEK</item>
        <item>ZAR</item>
    </string-array>


</resources>
