<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/bkgndColour"
    tools:context="com.londonappbrewery.bitcointicker.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logoImage2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/imageview_desc2"
            android:src="@drawable/ethereum_image" />

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/imageview_desc"
            android:src="@drawable/bitcoin_image" />
    </LinearLayout>

    <TextView
        android:id="@+id/priceLabel3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bitcoinPriceLabel"
        android:layout_alignLeft="@+id/bitcoinPriceLabel"
        android:layout_alignStart="@+id/bitcoinPriceLabel"
        android:text="@string/bitcoin_label"
        android:textAlignment="center"
        android:textColor="@color/ethereum"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/priceLabel4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ethereumPriceLabel"
        android:layout_alignLeft="@+id/priceLabel3"
        android:layout_alignStart="@+id/priceLabel3"
        android:text="@string/ethereum_label"
        android:textAlignment="center"
        android:textColor="@color/ethereum"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ethereumPriceLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/priceLabel3"
        android:layout_alignLeft="@+id/logoImage"
        android:layout_alignStart="@+id/logoImage"
        android:layout_marginBottom="43dp"
        android:text="@string/ethereum_default_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/bitcoinPriceLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout"
        android:layout_marginBottom="44dp"
        android:text="@string/bitcoin_default_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="56dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/base"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/currency_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownSelector="@color/fontColour"
            android:gravity="center_horizontal"
            android:spinnerMode="dropdown" />


    </LinearLayout>

</RelativeLayout>
